@@ -283,6 +283,7 @@ sub var {
 	 signed=>$signed, value=>$value,
 	);
     $net->data_type($data_type);  # If it was declared earlier as in/out etc
+    $net->net_type($net_type) if $net_type;
     # (from a single non-typed input/output stmt), remark the type now
     $self->{_cmtref} = $net;
 }
