@@ -511,6 +511,15 @@ verilog/parser_bugs.v:498: VAR  'parameter' 'bug671' 'netlist' '' '' '' '5:10:20
 verilog/parser_bugs.v:500: MODULE  'module' 'bug256' undef '0'
 verilog/parser_bugs.v:504: COMMENT  '// [#] [100] ['b0]'
 verilog/parser_bugs.v:507: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:509: MODULE  'module' 'msg1491' undef '0'
+verilog/parser_bugs.v:509: PORT  'A' 'module' '' '' '' '1'
+verilog/parser_bugs.v:509: PORT  'B' 'module' '' '' '' '2'
+verilog/parser_bugs.v:510: VAR  'port' 'A' 'module' '' '' '' ''
+verilog/parser_bugs.v:510: PORT  'A' 'module' 'output' '' '' '0'
+verilog/parser_bugs.v:511: VAR  'net' 'A' 'module' 'trireg' '' '' ''
+verilog/parser_bugs.v:512: VAR  'port' 'B' 'module' 'trireg' '' '' ''
+verilog/parser_bugs.v:512: PORT  'B' 'module' 'output' '' '' '0'
+verilog/parser_bugs.v:513: ENDMODULE  'endmodule'
 verilog/pinorder.v:001: COMMENT  '// DESCRIPTION: Verilog-Perl: Example Verilog for testing package'
 verilog/pinorder.v:002: COMMENT  '//'
 verilog/pinorder.v:003: COMMENT  '// This file ONLY is placed into the Public Domain, for any use,'
